# kafka-chat

./: README.md  pyproject.toml  tqdm_test.py
src/kafka_chat/: chat.tcss  chat_con.py  chat_pro.py  chat_textual.py  sample_pro.py  t.py
